Swagger + GenerateExcelFile method in OperationComptableService + some minor changes